# mandolin

./: .gitignore  .gitlab-ci.yml  CONSULT.md  Cargo.toml  Makefile  README.md  REARCHITECTURE.md  build.rs  markdown_import.py  openapi_face.yaml
.claude/: settings.local.json
.github/workflows/: nextjs.yml
builtin/: main.tera
demo/: 20250105-RuntimeError_Unreachable_executed.md  20250105-Unsupported extension in configuration file next.config.ts.md  20250107-crateからdemoを除外.md  next.config.mjs  next.config.ts  package-lock.json  package.json
demo/app/: compare.tsx  page.tsx
demo/openapi/: .gitignore
demo/wasm/: Cargo.toml
demo/wasm/src/: lib.rs
docs/: 20260214-REARCHITECTURE.md  20260214-issue.md  20260219-lambda360-2.md  20260219-lambda360-compat.md  20260219-lambda360.md  20260219-schema-ref.md  20260219-two-phase.md  20260220-TestShapeNode.md  REARCHITECTURE.md
examples/: TestShapeNodeMain.txt  example_axum.rs  example_axum_generate.rs  example_axum_generate_custom.rs  example_axum_generated.rs  example_axum_implement.rs  example_builtin.rs  example_builtin_axum.rs  example_builtin_go.rs  example_builtin_hono.rs  example_custom.rs  openapi.rs  openapi.ts  openapi_httpservice.rs  openapi_httpservice.ts  openapi_httpservice_with_auth.rs  openapi_lambda360.rs  openapi_lambda360.ts  openapi_nesting.rs  openapi_nesting.ts  openapi_oauth2.rs  openapi_petstore.rs  openapi_petstore.ts  openapi_plant.rs  openapi_plant.ts  openapi_sarod.rs  openapi_sarod.ts  readme_axum_generate.rs  readme_axum_generate_custom.rs  sandbox0.rs  sandbox1.rs
frontend/: 20250105-Module parse failed-Internal failure-parseVec could not cast the value.md  Makefile  next.config.mjs  package-lock.json  package.json
frontend/app/: compare.tsx  layout.tsx  page.tsx
frontend/wasm/: Cargo.toml  Makefile
frontend/wasm/src/: lib.rs
mandolin-cli/: Cargo.toml
mandolin-cli/src/: main.rs
openapi/: openapi.yaml  openapi_balance.yaml  openapi_face.yaml  openapi_httpservice.yaml  openapi_httpservice_with_auth.tsp  openapi_httpservice_with_auth.yaml  openapi_lambda360.json  openapi_nesting.tsp  openapi_nesting.yaml  openapi_oauth2.yaml  openapi_petstore.yaml  openapi_plant.yaml  openapi_sarod.json  openapi_sarod.yaml  openapi_uuid.json  openapi_uuid.tsp
src/: builtin.rs  filter.rs  function.rs  lib.rs  main.rs  resolve.rs  schema_cache.rs  utils.rs
templates/: dump.template  go_operation.template  go_schema.template  go_server.template  header.template  main.template  main.tera  rust_axum.template  rust_axum_extension.template  rust_operation.template  rust_schema.template  rust_server_axum.template  schema.template  server_axum.template  trait.template  typescript_hono.template  typescript_operation.template  typescript_schema.template
webdemo/: Cargo.toml  Makefile
webdemo/frontend/: next.config.ts  package-lock.json  package.json
webdemo/frontend/app/: layout.tsx  page.tsx
webdemo/src/: lib.rs
