[package]
name = "mandolin"
version = "0.2.5"
edition = "2024"
license = "MIT"
authors = ["lzpel"]
description = "Input openapi.json/yaml, output server source code in rust."
repository = "https://github.com/lzpel/mandolin"
homepage = "https://lzpel.github.io/mandolin/"
categories = ["web-programming::http-server","template-engine","api-bindings"]
keywords = ["openapi", "generator", "axum", "server"]
readme = "README.md"
build = "build.rs"
exclude = [".github/*", "frontend/*", "openapi/*", "media/*"]

[dependencies]
openapiv3 = "^2.0.0"
serde = { version = "^1.0.219", features = ["derive"]}
minijinja = { version = "^2.15", features = ["json", "preserve_order", "loop_controls"] }
regex = { version = "^1" }
# for binary
serde_yaml = { version = "^0.9.34+deprecated" }
serde_json = { version = "^1" }
clap = { version = "^4", features = ["derive"] }

[dev-dependencies]
axum = { version = "^0.8" }
tokio = { version = "^1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
uuid = { version = "^1", features = ["serde"] }
chrono = { version = "^0", features = ["serde"] }

[workspace]
members = ["frontend/wasm"]