[package]
name = "mandolin"
version = "0.4.0-alpha.1"
edition = "2024"
license = "MIT"
authors = ["lzpel"]
description = "Input openapi.json/yaml, output server source code in rust."
repository = "https://github.com/lzpel/mandolin"
homepage = "https://lzpel.github.io/mandolin/"
categories = ["web-programming::http-server","template-engine","api-bindings"]
keywords = ["openapi", "generator", "axum", "server"]
readme = "README.md"
build = "build.rs"
exclude = [".github/*", "frontend/*", "openapi/*", "media/*"]

[dependencies]
openapiv3 = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
minijinja = { version = "2.15", features = ["json", "preserve_order", "loop_controls"] }
regex = "1.12"
clap = { version = "4.5", features = ["derive"] }
heck = "0.5"

[dev-dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "macros", "signal"] }
uuid = { version = "1.20", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
